https://www.plantuml.com/plantuml/uml/hLHDRjiy4Dtp50DdOt-9_2NepZ2Cf2dQ54ZI7-S253MsY52aEXobSDC0FKHFs9DK34rRbkj5qNWbwRsPz-ODwNFFahYf3DnWeIKxWe-I6Sb21kyQRGguaiO8VwzjBKbMe8pq_eAPTDumlbVEplKtXDC-vQsp_8oSlHAbBX2K9cLGi6Q3SEKg_Ehe7ivEuTUFd_lgmsVne3qIGbj6MaY5qTA6_2W0ZWcNshVuiC8gHveaJdWPJU31wIBG2krhoQeSigkrci2SITlb2Ip8LJir9r3BbN6oI9pKv4a8cNicgJYEsAcANZ8hAqnbuRrQEvti6WzG5amjaM_Rak6eKtJKVap40FGhZn-JYoSWLAWVCCuKPzdOxzXUkqs9HgynBlzwTHS3kP7rD8LohJrFEzFDPg6YxSAtZlL2Ot7f6iiJq9O3mewbURDE6FtcUzPRqE6T7FOVOxhkQmz7IIN0Txi6jk2HB8fvatj5kjLEGdqdHtv3QG_kcjR2Upbiq_pKI6AaIdh6pKdyqg3dULFNHgDFOllp_DNQvierd0HgH_ovVSSNQdw5qYJxDM4j2IzqyKBDBsNDKjlONNlVu0Sga5we-xKZNAS_dReQxV_AE8y5rEJSOZQBihwKX87wpwhRwpCUVv_rhcNtdy1bMG-62L1OcWSksuTbASJkyScor37s477fwRS7nxKTX5Fm1-1jSd-2kvCEpWPX71ZyD-XIO0AT2mFv2fwp4y8wHiWTiwl0BM3JI03S1KQMox2XTE_70k3IMKN82CePWtBPe0UB3qWjHhX0GgiGKAeI79T8RJ6XOhCQ2xG514KXpjl7fZA_0G00
@startuml Mediator Pattern - Guild Hall
skinparam classAttributeIconSize 0
skinparam classFontSize 13
hide circle
title Homework 10 — Mediator Pattern (GuildHall)

interface GuildMediator {
  +register(member: GuildMember): void
  +dispatch(topic: String, from: GuildMember, payload: String): void
}

abstract class GuildMember {
  -name: String
  -mediator: GuildMediator
  --
  +getName(): String
  #getMediator(): GuildMediator
  +{abstract} receive(topic, from, payload): void
}

class GuildHall {
  -membersByTopic: Map<String, List<GuildMember>>
  -lastNotifiedCount: int
  -totalDispatches: int
  --
  +register(member): void
  +dispatch(topic, from, payload): void
  +getLastNotifiedCount(): int
  +getTotalDispatches(): int
  #addSubscriber(topic, member): void
  #subscribersFor(topic): List<GuildMember>
}

class Quartermaster {
  +requestSupplies(topic, payload): void
  +receive(topic, from, payload): void
}

class Scout {
  +reportRoute(topic, payload): void
  +receive(topic, from, payload): void
}

class Healer {
  +prepareAid(topic, payload): void
  +receive(topic, from, payload): void
}

class Captain {
  +issueOrder(topic, payload): void
  +receive(topic, from, payload): void
}

class Loremaster <<open/closed proof>> {
  +shareLore(topic, payload): void
  +receive(topic, from, payload): void
}

GuildHall ..|> GuildMediator
GuildMember o--> GuildMediator : routes through

Quartermaster --|> GuildMember
Scout         --|> GuildMember
Healer        --|> GuildMember
Captain       --|> GuildMember
Loremaster    --|> GuildMember

GuildHall "1" o-- "*" GuildMember : subscribers by topic

note bottom of GuildHall
  Topic-based dispatch.
  Concrete colleagues never
  reference each other directly.
end note

@enduml